[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gauss2d"
authors = [
    {name="Dan Taranu", email="dan.s.taranu@gmail.com"},
]
description = "Python (pybind11) bindings for gauss2d"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pybind11",
    "pytest",
]
dynamic = ["version"]

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = {attr = "gauss2d.__version__"}
