[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lsst-gauss2d"
authors = [
    {name="Dan Taranu", email="dan.s.taranu@gmail.com"},
]
description = "Python (pybind11) bindings for gauss2d"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pybind11",
    "pytest",
]
dynamic = ["version"]

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = {attr = "lsst.gauss2d.__version__"}

# This appears to be necessary for extend_path to find lsst in sys.modules
[tool.setuptools.packages.find]
where = [
    "lsst"
]