gauss2d_sources = [
    'centroid.cc',
    'ellipse.cc',
    'evaluate.cc',
    'gaussian.cc',
]
gauss2dlib = shared_library('gauss2d',
                            gauss2d_sources,
                            include_directories : inc,
                            #dependencies : ,
                            install : true,
                            soversion : '0.1.0')
